--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,20 @@
 		<relativePath />
 	</parent>
 
-	<groupId>eu.plugin</groupId>        <!-- FIXME: Your organization groupId here -->
-	<artifactId>VIP</artifactId> <!-- FIXME: Your project artifactId here   -->
+	<groupId>eu.plugin</groupId>
+	<artifactId>VIP</artifactId>
 	<version>1</version>
 
-	<name>VPT Image Preprocesor</name>                                               <!-- FIXME: Your project name here          -->
-	<description>ImageJ plugin intended for use with VPT Framework</description> <!-- FIXME: Your project description here   -->
-	<url>https://github.com/TilenS2002/VIP/tree/main</url>                   <!-- FIXME: Your project website here       -->
-	<inceptionYear>2025</inceptionYear>                                        <!-- FIXME: Your project starting year here -->
+	<name>VPT Image Preprocesor</name>
+	<description>ImageJ plugin intended for use with VPT Framework</description>
+	<url>https://github.com/TilenS2002/VIP/tree/main</url>
+	<inceptionYear>2025</inceptionYear>
 	<organization>
-		<name>Laboratory for Computer Graphics and Multimedia</name>           <!-- FIXME: Your organization name here    -->
-		<url>https://lgm.fri.uni-lj.si/</url> <!-- FIXME: Your organization website here -->
+		<name>Laboratory for Computer Graphics and Multimedia</name>
+		<url>https://lgm.fri.uni-lj.si/</url>
 	</organization>
 	<licenses>
-		<license>                         <!-- FIXME: Your license here -->
+		<license>
 			<name>CC0</name>
 			<url>https://creativecommons.org/publicdomain/zero/1.0/</url>
 			<distribution>repo</distribution>
@@ -35,9 +35,9 @@
 	<developers>
 		<!-- See https://imagej.net/Team -->
 		<developer>
-			<id>TilenS2002</id>                                          <!-- FIXME: Your GitHub handle here -->
-			<name>Tilen Smrdel</name>                            <!-- FIXME: Your name here          -->
-			<url>https://github.com/TilenS2002</url> <!-- FIXME: Your website here       -->
+			<id>TilenS2002</id>
+			<name>Tilen Smrdel</name>
+			<url>https://github.com/TilenS2002</url>
 			<roles>
 				<role>developer</role>
 				<role>debugger</role>
@@ -73,10 +73,10 @@
 	</ciManagement>
 
 	<properties>
-		<package-name>eu.plugin.imagej</package-name>                   <!-- FIXME: Your project package prefix here -->
-		<main-class>eu.plugin.imagej.Importer</main-class>        <!-- FIXME: Your project main class here, or delete for none -->
-		<license.licenseName>cc0</license.licenseName>                      <!-- FIXME: Your license-maven-plugin license code here -->
-		<license.copyrightOwners>LGM</license.copyrightOwners> <!-- FIXME: Your organization legal entity name here -->
+		<package-name>eu.plugin.imagej</package-name>
+		<main-class>eu.plugin.imagej.Importer</main-class>
+		<license.licenseName>cc0</license.licenseName>
+		<license.copyrightOwners>LGM</license.copyrightOwners>
 	</properties>
 
 	<repositories>
